2009-03-12  Esteban Sanchez  <estebans@artica.es>

	* reporting/fgraph.php: Fixed interval in combined graphs. Fixed
	alert min and max values. Fixed data retrieval on boolean charts and a
	bug that was not drawing this charts.
	
	* pandoradb_data.sql: First new now has the current date.

	* operation/servers/view_server.php: Fixed progress bar height.

2009-03-12  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Fixed an undefined variable error.
	
2009-03-12  Esteban Sanchez  <estebans@artica.es>

	* reporting/pandora_graph.php: Added to repository. New interface to
	abstract pandora from the chart engines. This would make easier a
	engine changing in the future.

	* reporting/pchart_graph.php: Added to repository. Specific class to
	use pChart engine for Pandora. First working version.

	* reporting/pChart/pCache.class, reporting/pChart/pDaita.class: Added
	to repository. pChart engine
	
	* reporting/pChart/pChart.class: Added to repository. pChart engine
	slightly modified and adopted to Pandora needs.

2009-03-12  Esteban Sanchez  <estebans@artica.es>

	* include/auth/mysql.php: Added a cache to is_user_admin().

	* include/config_process.php: Changed build version. Load l10n tables
	before extensions.
	
	* include/functions_config.php: Fixed an error on update_config() that
	fails to update when the value has changed. Fixed style updating
	also.

	* include/functions_db.php: Added GROUP BY token to
	format_array_to_where_clause_sql().

	* include/functions_ui.php: Added a flag to debug() to allow disabling
	the backtrace output.

	* operation/agentes/tactical.php: Fixed tab. Makes percentage images a
	bit taller.

	* ChangeLog.2008: Added to repository. Stripped ChangeLog history.

2009-03-11  Esteban Sanchez  <estebans@artica.es>

	* include/functions_reporting.php: Fixed an error on get_group_stats()
	that gives wrong monitor status count because it was counting some
	modules twice.

2009-03-10  Evi Vanoost  <vanooste@rcbi.rochester.edu>
